--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "next-auth": "^4.19.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-flow": "^1.0.3",
+    "react-flow-renderer": "^10.3.17",
+    "reactflow": "^11.5.6",
     "superjson": "1.9.1",
     "zod": "^3.20.2"
   },
